# prod_project

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api.yml  pngme  sqlite.db-shm  sqlite.db-wal  start.vbs
migrations/: 20250117110629_companies.sql  20250118055223_promos.sql  20250120101207_users.sql
src/: main.rs  routes.rs
src/business/: mod.rs
src/business/auth/: mod.rs  sign_in.rs  sign_up.rs
src/business/middlewares/: authorize.rs
src/business/promo/: create.rs  list.rs  mod.rs  promo_by_id.rs
src/user/: feed.rs  mod.rs  profile.rs
src/user/auth/: mod.rs  sign_in.rs  sign_up.rs
src/user/middlewares/: authorize.rs
src/user/promo/: comments.rs  like.rs  mod.rs
src/user/promo/comments/: mod.rs
