[package]
name = "prod_project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
